--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,28 @@
 /* write your override styles here */
+#wall .tag-1 {
+    display: none;
+  }
+
+div#wall div#tag-2 {
+    display: none;
+}
+
+div#wall div#tag-3.slick{
+    display: none;
+}
+
+div#wall div.parent #tag-4 {
+    display: none;
+}
+
+div#wall div.parent #tag-5.slick{
+    display: none;
+}
+
+div#wall div.parent > div + div > div#tag-6{
+    display: none;
+}
+
+div#wall div.parent div:last-child div#tag-6 {
+    display: none;
+}
